# CheatCLI

./: CMakeLists.txt  README.md  build.ps1
CheatCLI/: CMakeLists.txt
CheatCLI/src/: api.cpp  api.h  main.cpp  scanner.cpp  scanner.h
Game/: CMakeLists.txt
Game/src/: main.cpp
